2008-10-27  Dave Morrison  <drm@finkproject.org>

	* Bootstrap.pm, Services.pm: modernize bootstrap

2008-10-21  Dave Morrison  <drm@finkproject.org>

	* VirtPackage.pm: correct an error in what system perl 5.8.8 "provides"

2008-09-28  Daniel Macks  <dmacks@netspace.org>

	* Command.pm: Backport fix to system(chown) filename lists
	* Engine.pm: Backport fix cleanup --deb with epochs
	* Validation.pm: Backports... fix of sub{} exit; deprecation of
	scrollkeeper for rarian-compat; BDO flag-test and .dylib test
	improvements

2008-09-15  Alexander Hansen <akh@finkproject.org>

	* Bootstrap.pm: Support 10.5.5

2008-08-28  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* Validation.pm: Allow 'AppBundles' in splitoffs.

2008-07-08  Dave Morrison  <drm@finkproject.org>

	* Selfupdate/point.pm: switch URL retrieval to &fetch_url_to_file so 
	that we can pass the option 'try_all_mirrors' which forces re-download
	of the file even if it already exists; also, exit with a more
	informative message

2008-07-01  Alexander Hansen  <akh@finkproject.org>
	
	* Bootstrap.pm: recognize 10.5.4

2008-06-29  Dave Morrison  <drm@finkproject.org>

	* Configure.pm: clarify message issued after enabling unstable

2008-06-28  Dave Morrison  <drm@finkproject.org>

	* SelfUpdate/CVS.pm, SelfUpdate/rsync.pm:  More descriptive warning
	message for users who need to install XCode prior to choosing the 
	cvs or rsync selfupdate method.
	* SelfUpdate.pm: prevent changing update method *to* point, rather
	than *from* point.

2008-06-20  Dave Morrison  <drm@finkproject.org>

	* FinkVersion.pm.in: bindist 0.9.0

2008-06-19  Dave Morrison  <drm@finkproject.org>

	* Validation.pm: Allow $basepath/Library/ to be installed (but with 
	nothing below it other than what is already allowed, i.e., 
	$basepath/Library/Frameworks)
	* Bootstrap.pm: revise the installation message on 10.5

2008-06-10  Dave Morrison  <drm@finkproject.org>

	* Bootstrap.pm: Backport changes to copy_description
